--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+html {
+  min-height: 100% !important;
+}
+
+#root {
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  min-height: 100vh;
 }
 
 h1 {
@@ -19,4 +30,15 @@ a {
 
 a:hover {
   opacity: 0.8;
+}
+
+.wrapper {
+  max-width: 900px;
+  min-height: calc(100vh - 4rem);
+
+  margin: 0 auto;
+  padding: 1rem 1rem;
+  background: #131313;
+  border-left: 2px solid #222;
+  border-right: 2px solid #222;
 }
