--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,7 @@ a:hover {
 
 .wrapper {
   width: 100%;
+  max-width: 1000px;
   min-height: calc(100vh - 8rem);
   margin: 0 auto;
   padding: 1rem 1rem;
