--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,3 +73,12 @@ p {
   margin: 0 auto;
   padding: 2rem 1rem;
 }
+
+.tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
