--- a/server/mail/views/email.handlebars
+++ b/server/mail/views/email.handlebars
@@ -6,19 +6,49 @@
     <title>Document</title>
 
     <style>
-      h1 { color: red }
-      p { color: blue;
-          font-size: 16px; }
+      .header { background-color: #2C3E50; color: white; padding: 20px;
+      text-align: center; } .challenges { margin: 40px 0; padding: 20px;
+      background-color: #ECF0F1; color: #2C3E50; border-radius: 10px; }
+      .challenges ul { list-style: none; padding: 0; margin: 0; } .challenges li
+      { margin-bottom: 20px; } .challenges h3 { font-weight: bold;
+      margin-bottom: 10px; } .footer { background-color: #2C3E50; color: white;
+      padding: 20px; text-align: center; margin-top: 40px; } .footer a { color:
+      white; text-decoration: underline; }
     </style>
 
   </head>
   <body>
-      <h1>Hello {{displayName}}</h1>
-      <p>{{text}}</p>
-      <p>Would you like to learn more about <strong>{{tech}}</strong>?</p>
-      <p>Then, <strong>{{objective}}</strong> is for you!</p>
-
-      <p>Would you like to learn more about <strong>{{tech2}}</strong>?</p>
-      <p>Then, <strong>{{objective2}}</strong> is for you!</p>
+    <div class="header">
+      <h1>Enhance your front-end skills with our challenges</h1>
+    </div>
+    <div class="challenges">
+      <p>Dear {{displayName}},</p>
+      <p>We hope this email finds you well. As a web developer, it's crucial to
+        keep up with the latest front-end technologies and stay ahead of the
+        curve. To help you achieve that, we have curated a set of challenges
+        that will help you to refine your skills in HTML, JavaScript, CSS,
+        React, and Tailwind CSS.</p>
+      <h3>Challenges:</h3>
+      <ul>
+        {{objectives}}
+        <li>Build a responsive landing page using HTML, CSS and JavaScript.</li>
+        <li>Create a responsive navigation bar using Tailwind CSS.</li>
+        <li>Implement a to-do list application using React and Tailwind CSS.</li>
+        <li>Create a weather application using React and CSS.</li>
+        <li>Implement a random quote generator using JavaScript and HTML.</li>
+      </ul>
+      <p>We are confident that these challenges will help you to take your
+        front-end skills to the next level and stay ahead in the industry. You
+        can choose to complete the challenges at your own pace and at any time
+        convenient for you.</p>
+    </div>
+    <div class="footer">
+      <p>If you have any questions or need help, don't hesitate to reach out to
+        us. We're here to support you in your journey to becoming a front-end
+        master.</p>
+      <p>Best regards,</p>
+      <p>Fendch Team</p>
+      <p><a href="#">Learn more</a></p>
+    </div>
   </body>
 </html>
